--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Dylan Britz",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
