Step 2: Sign Up Page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daisy-ui-dashbaord",
+  "name": "daisy-ui-dashboard",
   "version": "1.0.0",
   "description": "",
   "main": "./public/index.html",
