--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "daisy-ui-dashboard",
   "version": "1.0.0",
   "description": "",
-  "main": "./public/index.html",
+  "main": "./dist/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./dist/styles/output.css --watch",
